2009-01-09  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/axis/DateTickUnit.java
    (unit): Deprecated,
    (unitType): New field,
    (rollUnit): Deprecated,
    (rollUnitType): New field,
    (DateTickUnit): Deprecated existing constructors, replaced with new ones,
    (getUnitType): New method,
    (getRollUnitType): Likewise,
    (getCount): Renamed getMultiple(),
    (getRollCount): Renamed getRollMultiple(),
    (addToDate): Updated for new fields,
    (rollDate): Likewise,
    (getCalendarField): Likewise,
    (getMillisecondCount): Updated for new type,
    (intToUnitType): Utility method for deprecated constants,
    (unitTypeToInt): Likewise,
    (notNull): Utility method for deprecated constructor,
    (equals): Updated for new fields,
    (units): Removed,
    (YEAR, MONTH, DAY, HOUR, MINUTE, SECOND, MILLISECOND): Deprecated,
    (getUnit): Deprecated,
    (getRollUnit): Likewise,
    * source/org/jfree/chart/axis/DateTickUnitType.java: New file.

----------  JFREECHART 1.0.12 RELEASED ------------------------

2008-12-31  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 2471906:
    * source/org/jfree/chart/renderer/xy/XYAreaRenderer.java
    (drawItem): Check for dashed stroke and clip area manually for that case.

2008-12-30  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/MultiplePiePlot.java
    (legendItemShape): New field,
    (MultiplePiePlot(CategoryDataset)): Initialise new field,
    (getLegendItemShape): New method,
    (setLegendItemShape): New method,
    (getLegendItems): Use new field,
    (equals): Check new field,
    (clone): Implemented,
    (readObject): Handle new field,
    (writeObject): Likewise.

2008-12-20  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 2452078:
    * source/org/jfree/chart/ChartFactory.java
    (createStackedAreaChart): Set category margin to zero.

2008-12-18  David Gilbert  <david.gilbert@object-refinery.com>
